<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient_backgroud"
tools:context=".FullscreenActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/adroast"
            android:textColor="#ffffff"
            android:textSize="10sp"
            app:fontFamily="@font/miriam_libre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button"
            app:layout_constraintVertical_bias="0.903"
            app:srcCompat="@mipmap/ic_logo_foreground" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Company Name"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Username"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Email"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="261dp"
            android:layout_height="205dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#00000000"
            android:contentDescription="@string/string_todo"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_panorama_fish_eye_black_24dp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="110dp"
            android:layout_height="97dp"
            android:background="#00000000"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:backgroundTint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="215dp"
            android:layout_height="46dp"
            android:layout_marginBottom="140dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>