<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".FullscreenActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="160dp"
            android:layout_height="153dp"
            android:background="#00000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton10"
            app:layout_constraintEnd_toEndOf="@+id/imageButton10"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="@+id/imageButton10"
            app:layout_constraintTop_toTopOf="@+id/imageButton10"
            app:srcCompat="@drawable/ic_upload_foreground"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
            app:layout_constraintEnd_toEndOf="@+id/imageButton9"
            app:layout_constraintStart_toStartOf="@+id/imageButton9"
            app:layout_constraintTop_toTopOf="@+id/imageButton9"
            app:srcCompat="@drawable/ic_camera_foreground"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="112dp"
            android:background="#00000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_panorama_fish_eye_black_24dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_panorama_fish_eye_black_24dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textColor="#ffffff"
            android:textSize="37sp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upload_image"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5"
            app:layout_constraintVertical_bias="0.23" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/take_picture"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.194" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>